B&L QA/objects/Medical_Inquiry__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Inquiries</relationshipLabel>
        <relationshipName>Medical_Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adverse_Event_Contact__c</fullName>
        <formula>&quot;If this request related to a potential Adverse Event, please contact BLReturns@bausch.com&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adverse Event Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adverse_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Note: Do not check it if the case already has been filed, or will be filed separately.</inlineHelpText>
        <label>Adverse Event?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anticipated_Surgery_Date__c</fullName>
        <label>Anticipated Surgery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Call__c</fullName>
        <label>Best Time to Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning (8:00AM - 12:00PM)</fullName>
                </value>
                <value>
                    <fullName>Afternoon (12:PM - 5:00PM)</fullName>
                </value>
                <value>
                    <fullName>Evening (5:00PM - 9:00PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billed_Minutes__c</fullName>
        <label>Billed Minutes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billed_Time__c</fullName>
        <label>Billed Time</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <formula>Text(Contact__r.Medical_Title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Email__c</fullName>
        <formula>Requested_Consultant_1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_FirstName__c</fullName>
        <formula>Requested_Consultant_1__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_LastName__c</fullName>
        <formula>SUBSTITUTE( Requested_Consultant_1__r.LastName , &quot;-CON&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_NPI__c</fullName>
        <formula>Requested_Consultant_1__r.NPID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant NPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName  &amp; &quot; &quot;   &amp; Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Surgeon or HCP</description>
        <label>Surgeon</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medical Inquiries</relationshipLabel>
        <relationshipName>Medical_Inquiries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_first_name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact first name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <label>Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Preferred Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Inquiry_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_Services__c</fullName>
        <label>Description of Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Invoice_to_Medical_Affairs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Invoice to Medical Affairs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>IF( ISPICKVAL( Delivery_Method__c , &quot;Fax&quot;) ,  Specify_Phone__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Details__c</fullName>
        <formula>IF( ISPICKVAL( Inquiry_Type__c ,&quot;Consultant Request&quot;)  ||  ISPICKVAL( Inquiry_Type__c ,&quot;Mentor Request&quot;) , &quot;Requested Consultant:&quot;  &amp; Requested_Name_1__c  &amp; &quot; OR &quot; &amp; Requested_Name_2__c &amp;  MID( $Setup.BauschSettings__c.LineFeed__c, 6, 2) &amp; &quot; Anpicipated Surgery Date: &quot; &amp;  text(Anticipated_Surgery_Date__c) &amp; Mid($Setup.BauschSettings__c.LineFeed__c, 6, 2) &amp; &quot;Best time to call: &quot; &amp;  Text(Best_Time_to_Call__c) &amp; Mid($Setup.BauschSettings__c.LineFeed__c, 6, 2) &amp; &quot; Time Zone: &quot; &amp; Text(Time_Zone__c) &amp; Mid($Setup.BauschSettings__c.LineFeed__c, 6, 2) &amp;  Inquiry_Text__c  , Inquiry_Text__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquiry Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Text__c</fullName>
        <label>Inquiry Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant Request</fullName>
                </value>
                <value>
                    <fullName>Mentor Request</fullName>
                </value>
                <value>
                    <fullName>Medical Information Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KOL_Mentor_Flag__c</fullName>
        <formula>IF( ISPICKVAL( Inquiry_Type__c , &quot;KOL Consultation&quot;) , &quot;K&quot;, IF( ISPICKVAL( Inquiry_Type__c , &quot;Surgical Mentor Call&quot;),&quot;M&quot;,&quot;I&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KOL/Mentor Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPID__c</fullName>
        <formula>Requested_Consultant_1__r.NPID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>IF( ISPICKVAL( Delivery_Method__c , &quot;Phone&quot;) ,  Specify_Email__c ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Addres__c</fullName>
        <formula>Requested_Consultant_1__r.Primary_Practice_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Addres</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Name__c</fullName>
        <formula>Requested_Consultant_1__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_address_1__c</fullName>
        <formula>Requested_Consultant_1__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_address_2__c</fullName>
        <formula>Requested_Consultant_1__r.MailingCity  &amp;  Requested_Consultant_1__r.MailingState  &amp;  Requested_Consultant_1__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <formula>SUBSTITUTE( Text(Product__c) ,&quot;Stellaris.&quot;, &quot;Stellaris&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Controlling field for Product</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IOLs</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Viscoelastics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Crystalens</fullName>
                </value>
                <value>
                    <fullName>Trulign</fullName>
                </value>
                <value>
                    <fullName>SofPort</fullName>
                </value>
                <value>
                    <fullName>Akreos</fullName>
                </value>
                <value>
                    <fullName>enVista</fullName>
                </value>
                <value>
                    <fullName>Victus - Cataract</fullName>
                </value>
                <value>
                    <fullName>Stellaris.</fullName>
                </value>
                <value>
                    <fullName>Stellaris PC (Vit - Ret)</fullName>
                </value>
                <value>
                    <fullName>Victus - Flap</fullName>
                </value>
                <value>
                    <fullName>Excimer/Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Amvisc</fullName>
                </value>
                <value>
                    <fullName>Amvisc Plus</fullName>
                </value>
                <value>
                    <fullName>OcuCoat</fullName>
                </value>
                <value>
                    <fullName>Hoya</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_Type__c</fullName>
        <formula>Owner:User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Consultant_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested Consultant 1st Choice</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2) OR (3 AND 4))</booleanFilter>
            <filterItems>
                <field>Contact.KOL_Flag__c</field>
                <operation>equals</operation>
                <valueField>$Source.Inquiry_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.KOL_Product_Area__c</field>
                <operation>contains</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Mentor_Flag__c</field>
                <operation>equals</operation>
                <valueField>$Source.Inquiry_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Mentor_Product_Area__c</field>
                <operation>contains</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medical Inquiries (Requested Consultant 1st Choice)</relationshipLabel>
        <relationshipName>Medical_Inquiries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Consultant_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested Consultant 2nd Choice</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2) OR (3 AND 4))</booleanFilter>
            <filterItems>
                <field>Contact.KOL_Flag__c</field>
                <operation>equals</operation>
                <valueField>$Source.Inquiry_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.KOL_Product_Area__c</field>
                <operation>contains</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Mentor_Product_Area__c</field>
                <operation>contains</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Mentor_Flag__c</field>
                <operation>equals</operation>
                <valueField>$Source.Inquiry_Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medical Inquiries (Requested Consultant 2nd Choice)</relationshipLabel>
        <relationshipName>Medical_Inquiries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Name_1__c</fullName>
        <formula>Requested_Consultant_1__r.FirstName  &amp; &quot; &quot;  &amp;  SUBSTITUTE(Requested_Consultant_1__r.LastName, &quot;-CON&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Name 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Name_2__c</fullName>
        <formula>Requested_Consultant_2__r.FirstName &amp; &quot; &quot; &amp; Requested_Consultant_2__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Name 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Representative__c</fullName>
        <formula>Owner:User.FirstName  &amp; &quot; &quot;  &amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requesting Representative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_IRMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked  to indicate sent to IRMS.</description>
        <inlineHelpText>Used in workflow to sent email to IRMS id unchecked - then updated to checked - to indicate sent.</inlineHelpText>
        <label>Sent to IRMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specify_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Specify_Fax__c</fullName>
        <label>Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Specify_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State_License__c</fullName>
        <formula>Requested_Consultant_1__r.State_License__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent to IRMS</fullName>
                </value>
                <value>
                    <fullName>Request Approved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Billing Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <formula>Owner:User.Territory_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_email_number_from_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to auto populate the Phone, Fax or Email from the Contact record OR enter a new email or number below for contact method.</inlineHelpText>
        <label>Use email/number from Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Id__c</fullName>
        <formula>Requested_Consultant_1__r.Vendor_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_last_name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>contact last name</label>
        <type>Text</type>
    </fields>
    <label>Medical Inquiry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Product__c</columns>
        <columns>Inquiry_Text__c</columns>
        <columns>Requested_Name_1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SMI-{0000}</displayFormat>
        <label>Medical Inquiry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Inquiries</pluralLabel>
    <recordTypes>
        <fullName>KOL_Consultation</fullName>
        <active>true</active>
        <description>KOL Consultation</description>
        <label>KOL Consultation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_Information_Request</fullName>
        <active>true</active>
        <description>Medical Information Request</description>
        <label>Medical Information Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_KOL</fullName>
        <active>true</active>
        <description>Editable PL for creation of Request</description>
        <label>New KOL</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_MIR</fullName>
        <active>true</active>
        <description>Editable PL for creation of Request</description>
        <label>New MIR</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Mentor</fullName>
        <active>true</active>
        <description>Editable PL for creation of Request</description>
        <label>New Mentor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Surgical_Mentor_Call</fullName>
        <active>true</active>
        <description>Surgical Mentor Call</description>
        <label>Surgical Mentor Call</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Surgeon</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Contact__c )</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>You Cannot change the Surgeon Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Requied</fullName>
        <active>true</active>
        <description>A Email Address is required if the Delivery Method is Email</description>
        <errorConditionFormula>ISPICKVAL( Delivery_Method__c , &quot;Email&quot;)  &amp;&amp; ( ISBLANK( Specify_Email__c )  ||  ISNULL(Specify_Email__c ))</errorConditionFormula>
        <errorDisplayField>Specify_Email__c</errorDisplayField>
        <errorMessage>A Email Address is required if the Delivery Method is Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Requied</fullName>
        <active>true</active>
        <description>A FAX number is required if the Delivery Method is Fax</description>
        <errorConditionFormula>ISPICKVAL( Delivery_Method__c , &quot;Fax&quot;)  &amp;&amp; ( ISBLANK( Specify_Fax__c )  ||  ISNULL(Specify_Fax__c ))</errorConditionFormula>
        <errorDisplayField>Specify_Fax__c</errorDisplayField>
        <errorMessage>A Fax number is required if the Delivery Method is Fax</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Requied</fullName>
        <active>true</active>
        <description>A phone number is required if the Delivery Method is phone</description>
        <errorConditionFormula>ISPICKVAL( Delivery_Method__c , &quot;Phone&quot;)  &amp;&amp; ( ISBLANK( Specify_Phone__c )  ||  ISNULL(Specify_Phone__c ))</errorConditionFormula>
        <errorDisplayField>Specify_Phone__c</errorDisplayField>
        <errorMessage>A phone number is required if the Delivery Method is phone</errorMessage>
    </validationRules>
</CustomObject>